tests/rosetta/out/Fortran/catalan-numbers-1.error
gfortran: exit status 1
/tmp/catalan-numbers-1.f90:14:22:

   14 |     if ((((k < 0) .or. k) > n)) then
      |                      1
Error: Operands of logical operator ‘.or.’ at (1) are LOGICAL(4)/INTEGER(4)
/tmp/catalan-numbers-1.f90:19:9:

   19 |     if (((kk > n) - kk)) then
      |         1
Error: Operands of binary numeric operator ‘-’ at (1) are LOGICAL(4)/INTEGER(4)
