tests/rosetta/out/Fortran/catalan-numbers-1.f90
! Generated by Mochi compiler v0.10.26 on 2025-07-16T09:28:40Z
program catalan_numbers_1
  implicit none
    integer :: kk
    integer :: res
    integer :: i
      character(len=100) :: s0
  main()
  contains
  recursive integer function binom(n,k) result(res)
    integer, intent(in) :: n
    integer, intent(in) :: k
    if ((((k < 0) .or. k) > n)) then
      res = 0
      return
    end if
    kk = k
    if (((kk > n) - kk)) then
      kk = (n - kk)
    end if
    res = 1
    i = 0
    do while ((i < kk))
      res = ((res * ((n - i))))
      i = (i + 1)
      res = int(((res / i)))
    end do
    res = res
    return
  end function binom
  recursive integer function catalan(n) result(res)
    integer, intent(in) :: n
    res = int(((binom((2 * n),n) / ((n + 1)))))
    return
  end function catalan
  recursive integer function main() result(res)
    do i = 0, 15
      write(s0,'(G0)') catalan(i)
      print *, s0
    end do
  end function main
end program catalan_numbers_1
